2005-08-04  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave:
	* dcsewerdesign.profile.buildnodelist.ave:
	* dcsewerdesign.profile.buildlinelist.ave: refactored
	* dcsewerdesign.profile.constantgradient.calculate.ave: Started with
	RFE #1240904 implementation
	* scripts.saveallscripts.ave: adjusted for new workstation
	* dcsewerdesignextension.make.ave: Adjusted for 2.0.8 release

2005-08-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.apr: Added project as binary file.
	
2005-04-26  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.nsi:
	* build.xml:
	* dcsewerdesignextension.make.ave:
	* doc/en/version.xml: version is 2.0.7 now
	* doc/en/dcsewerdesign.xml: updated What's new section
	
2005-04-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.profile.buildlinelist.ave:
	* dcsewerdesign.profile.create.ave: deleted (old code, not used
	any more)
	* dcsewerdesign.complexprofile.create.ave: fixed bug #1182188 (buggy
	profile creation for water networks)
	
2005-03-10  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.complexprofile.create.ave:
	* dcsewerdesign.profile.cumulativelinedatebox.create.ave:
	* dcsewerdesign.profile.linedatabox.ave:
	* dcsewerdesign.profile.manholedatabox.ave:
	* doc/en/dcsewerdesign.xml: Text alignment for data box contents can
	be specified now (RFE #1158375)
	* doc/version.xml:
	* dcsewerdesign.nsi: 
	* dcsewerdesignextension.make.ave: version is 2.0.6+cvs now
	
2005-03-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave: Profiles can be created for
	single lines now (RFE #1111927)
	* dcsewerdesignextension.make.ave: Version number is 2.0.6+cvs now

2005-02-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcsewerdesign.xml: Added tip to create function 
	(upstream/downstream values for manholes)
	
2005-01-31  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.nsi:
	* doc/en/version.xml: