@@ -19,54 +19,133 @@
 ' Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 extSewer = Extension.find("DC Sewer Design")
+
+blnDebug = false
  
 ' get the line table
 
 viewActive = av.getActiveDoc
 thmLine = viewActive.getEditableTheme
-themeList = viewActive.getThemes
-lstLineThemes = av.run("DCSewerDesign.ThemeList.returnLineThemes", themeList)
-for each thmTheme in lstLineThemes
-  if((strLineTheme <> nil)and(strLineTheme.lcase = thmTheme.getName.lcase))then
-    thmLine = thmTheme
-    break
-  end
-  if(thmTheme.getName.left(6) <> "Profil")then
-    lstLineThemes.shuffle(thmTheme, 0)
-    break
-  end
-end
-if(thmLine.asString = "nil")then
-  thmLine = Msgbox.Choice (lstLineThemes, "Select the Sewer Line Theme.", "DC Sewer - Complex Profile")   
-end
-if(thmLine.asString = "nil") then
-  exit
-end
-ftbLine = thmLine.GetFTab 
+ftbLine = thmLine.getFTab 
 fldLineDcId = ftbLine.findField("dc_id")
+fldLineShape = ftbLine.findField("Shape")
 if(fldLineDcId.asString = "nil")then
   MsgBox.error("Error: Field Line.DC_ID was not found.","DC Sewer Design")
   exit
 end
 
-' get the manhole table
-thmManhole = nil
-lstManholeThemes = av.run("DCSewerDesign.ThemeList.returnPointThemes", themeList)
-for each thmTheme in lstManholeThemes
-  if((strManholeTheme <> nil)and(strManholeTheme.lcase = thmTheme.getName.lcase))then
-    thmManhole = thmTheme
-    break
+lstFields = ftbLine.getFields.deepclone
+
+' Search preferences for upstream/downstream fields
+
+dicPreferences = extSewer.getPreferences
+
+fldUpstream = nil
+strUpstream = dicPreferences.get("strUpstreamField")
+if(strUpstream <> nil)then
+  fldUpstream = ftbLine.findField(strUpstream)
+end
+fldDownstream = nil
+strDownstream = dicPreferences.get("strDownstreamField")
+if(strDownstream <> nil)then
+  fldDownstream = ftbLine.findField(strDownstream)
+end
+
+' Let the user choose the fields if necessary
+
+if((fldUpstream = nil) or (fldDownstream = nil))then
+  lstNumberFields = av.run("DCSewerDesign.Fields.returnNumberFields",lstFields)
+  fldUpstream = MsgBox.choice(lstNumberFields, "Select upstream field."+NL+
+                              "This field will be overwritten for some records.","DC Sewer Design")
+  if(fldUpstream = nil)then
+    exit
   end
+  fldDownstream = MsgBox.choice(lstNumberFields, "Select downstream field."+NL+
+                              "This field will be overwritten for some records.","DC Sewer Design")
+  if(fldDownstream = nil)then
+    exit
+  end
+  strUpstream = fldUpstream.getName
+  dicPreferences.set("strUpstreamField", strUpstream)
+  strDownstream = fldDownstream.getName
+  dicPreferences.set("strDownstreamField", strDownstream)
 end
-if(thmManhole.asString = "nil")then
-  thmManhole = Msgbox.Choice (lstManholeThemes, "Select the Manhole Theme.", "DC Sewer - Complex Profile")
+if(blnDebug)then
+  System.echo(fldUpstream.getName)
+  System.echo(fldDownstream.getName)
 end
-if (thmManhole.asString = "nil") then
-  exit
-end
-ftbManhole = thmManhole.GetFTab 
+fldUpstream = ftbLine.findField(fldUpstream.getName)
+fldDownstream = ftbLine.findField(fldDownstream.getName)
+
 
 lstProfileLines = av.run("DCSewerDesign.Profile.buildLineList", {ftbLine, fldLineDcId})
-lstProfileManholes =av.run("DCSewerDesign.Profile.buildNodeList", {ftbLine, ftbManhole, lstProfileLines})
+for each recLine in lstProfileLines
+  system.echo(ftbLine.returnValue(fldLineDcId, recLine)+ftbLine.returnValue(fldUpstream, recLine).asString)
+end
+
+' Get first upstream value
+
+numFirstUpstream = ftbLine.returnValue(fldUpstream, lstProfileLines.get(0))
+
+' Get last downstream value
+
+numLastDownstream = ftbLine.returnValue(fldDownstream, lstProfileLines.get(lstProfileLines.count-1))
+
+' Calculate segment, total length
+
+lstSegmentLength = List.make
+numTotalLength = 0
+for each recLine in lstProfileLines
+  pllShape = ftbLine.returnValue(fldLineShape, recLine)
+  numSegmentLength = pllShape.returnLength
+  numTotalLength = numTotalLength + numSegmentLength
+  lstSegmentLength.add(numSegmentLength)
+end
+
+' Calculate Gradient
+if(blnDebug)then
+  System.echo("FirstUpstream: "+numFirstUpstream.asString)
+  System.echo("Last Downstream: "+numLastDownstream.asString)
+  System.echo("Total Length: "+numTotalLength.asString)
+end
+numGradient = (numFirstUpstream - numLastDownstream)/numTotalLength
 
 
+' Request approval
+
+blnApproval = MsgBox.yesNoCancel("Interpolate "+strUpstream.quote+","+strDownstream.quote+" fields for "+
+  lstProfileLines.count.asString+" segments? Gradient is "+
+  numGradient.asString+". Selecting ""No"" will allow to reselect the fields","DC Sewer Design", true)
+
+if(blnApproval = nil)then
+  exit
+end
+
+if(blnApproval.not)then
+  dicPreferences.remove("strUpstreamField")
+  dicPreferences.remove("strDownstreamField")
+  exit
+end
+
+' Interpolate
+if(numGradient.isNull)then
+  MsgBox.error("Gradient is Null", "DC Sewer Design")
+  exit
+end
+numElevation = numFirstUpstream
+numI = 0
+for each recLine in lstProfileLines
+  ftbLine.setValue(fldUpstream, recLine, numElevation)
+  numSegmentLength = lstSegmentLength.get(numI)
+  numElevation = numElevation + (numSegmentLength*numGradient)
+  if(blnDebug)then
+    System.echo(numElevation.asString)
+  end  
+  ftbLine.setValue(fldDownstream, recLine, numElevation)
+  numI = numI + 1
+end
+
+' Control Result
+if((numElevation-numLastDownstream).abs > (numLastDownstream/1000))then
+  System.echo("DCSewerDesign.Profile.ConstantGradient.calculate(): More than 1/1000 difference in control.")
+end
