@@ -1,0 +1,54 @@
+' DCSewerDesign.Profile.ConstantGradient.update
+
+' Calculate a constant gradient for a sequence of line segments
+
+' (c) 2005 DORSCH Consult
+
+' This library is free software; you can redistribute it and/or
+' modify it under the terms of the GNU Lesser General Public
+' License as published by the Free Software Foundation; either
+' version 2.1 of the License, or (at your option) any later version.
+
+' This library is distributed in the hope that it will be useful,
+' but WITHOUT ANY WARRANTY; without even the implied warranty of
+' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+' Lesser General Public License for more details.
+
+' You should have received a copy of the GNU Lesser General Public
+' License along with this library; if not, write to the Free Software
+' Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+blnDebug = false
+
+viewActive = av.getActiveDoc
+blnEnabled = false
+thmEditable = viewActive.getEditableTheme
+if(thmEditable <> nil)then
+  ftbTheme = thmEditable.getFTab
+  if(ftbTheme <> nil)then
+    if(ftbTheme.getShapeClass.getClassName = "Polyline")then
+      bmpSelection = ftbTheme.getSelection
+      if(bmpSelection.count > 1)then
+        blnEnabled = true
+      else
+        if(blnDebug)then
+          System.echo("At least two records have to be selected.")
+        end
+      end
+    else
+      if(blnDebug)then
+        System.echo("Wrong class name:"+ftbTheme.getShapeClass.getClassName)
+      end
+    end
+  else
+    if(blnDebug)then
+      System.echo("No FTab")
+    end  
+  end    
+else
+  if(blnDebug)then
+    System.echo("No editable theme")
+  end
+end
+self.setEnabled(blnEnabled)
+
