@@ -24,3 +24,5 @@ theViewButtonBar.remove(self.get(1))
 mbTable = av.getProject.findGUI("Table").getMenuBar
 mbTable.remove(self.get(2))
 
+theViewButtonBar.remove(self.get(3))
+
